--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,17 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "fastapi (>=0.115.12,<0.116.0)",
+    "pydantic-settings (>=2.8.1,<3.0.0)",
+    "gunicorn (>=23.0.0,<24.0.0)"
 ]
 
 [tool.poetry]
 packages = [{include = "photogen_api", from = "src"}]
 
+
+[tool.poetry.group.dev.dependencies]
+uvicorn = "^0.34.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
