--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.11"
 dependencies = [
     "fastapi (>=0.115.12,<0.116.0)",
     "pydantic-settings (>=2.8.1,<3.0.0)",
-    "gunicorn (>=23.0.0,<24.0.0)"
+    "gunicorn (>=23.0.0,<24.0.0)",
+    "tortoise-orm[asyncpg] (>=0.25.0,<0.26.0)"
 ]
 
 [tool.poetry]
