--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,24 +2,30 @@
 name = "photogen-api"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "Elisey",email = "eliseyblajen@gmail.com"}
-]
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = [
-    "fastapi (>=0.115.12,<0.116.0)",
-    "pydantic-settings (>=2.8.1,<3.0.0)",
-    "gunicorn (>=23.0.0,<24.0.0)",
-    "tortoise-orm[asyncpg] (>=0.25.0,<0.26.0)"
-]
+dependencies = ["fastapi (>=0.115.12,<0.116.0)", "pydantic-settings (>=2.8.1,<3.0.0)", "gunicorn (>=23.0.0,<24.0.0)", "tortoise-orm[asyncpg] (>=0.25.0,<0.26.0)"]
 
-[tool.poetry]
-packages = [{include = "photogen_api", from = "src"}]
+[[project.authors]]
+name = "Elisey"
+email = "eliseyblajen@gmail.com"
 
+[[tool.poetry.packages]]
+include = "photogen_api"
+from = "src"
 
 [tool.poetry.group.dev.dependencies]
 uvicorn = "^0.34.1"
+tomlkit = "^0.13.2"
+
+[tool.poetry.group.dev.dependencies.aerich]
+extras = ["standard"]
+version = "^0.8.2"
+
+[tool.aerich]
+tortoise_orm = "photogen_api.config.TORTOISE_ORM"
+location = "./migrations"
+src_folder = "./."
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
