--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ from = "src"
 [tool.poetry.group.dev.dependencies]
 uvicorn = "^0.34.1"
 tomlkit = "^0.13.2"
+pytest = "^8.3.5"
+pytest-asyncio = "^0.26.0"
+httpx = "^0.28.1"
 
 [tool.poetry.group.dev.dependencies.aerich]
 extras = ["standard"]
