--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = ["fastapi (>=0.115.12,<0.116.0)", "pydantic-settings (>=2.8.1,<3.0.0)", "gunicorn (>=23.0.0,<24.0.0)", "tortoise-orm[asyncpg] (>=0.25.0,<0.26.0)", "python-jose[cryptography] (>=3.4.0,<4.0.0)", "aiogram (>=3.20.0,<4.0.0)", "python-multipart (>=0.0.20,<0.0.21)"]
+dependencies = ["fastapi (>=0.115.12,<0.116.0)", "pydantic-settings (>=2.8.1,<3.0.0)", "gunicorn (>=23.0.0,<24.0.0)", "tortoise-orm[asyncpg] (>=0.25.0,<0.26.0)", "python-jose[cryptography] (>=3.4.0,<4.0.0)", "aiogram (>=3.20.0,<4.0.0)", "python-multipart (>=0.0.20,<0.0.21)", "replicate (>=1.0.4,<2.0.0)"]
 
 [[project.authors]]
 name = "Elisey"
