--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,18 +13,29 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Setup SSH
+      - name: Setup SSH Key
         run: |
+          echo "Creating .ssh dir..."
           mkdir -p ~/.ssh
+
+          echo "Dumping first 5 lines of private key (masked by GitHub)..."
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" | head -n 5 || echo "❌ EMPTY KEY"
+
+          echo "Writing to id_rsa"
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+
+          echo "Setting permissions"
           chmod 600 ~/.ssh/id_rsa
+
+          echo "Scanning known_hosts"
           ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
 
-      - name: Deploy app
+          echo "Showing contents of known_hosts"
+          cat ~/.ssh/known_hosts
+
+          echo "SSH key setup completed"
+
+      - name: 🛠 Debug SSH key length
         run: |
-          ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
-            cd ${{ secrets.DP_PATH }}
-            git pull origin main
-            sudo systemctl restart gunicorn
-            echo "Deployed successfully!"
-          EOF
+          echo "Key length:"
+          echo "${{ secrets.SSH_PRIVATE_KEY }}"
