--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,27 +15,47 @@ jobs:
 
       - name: Setup SSH Key
         run: |
-          echo "Creating .ssh dir..."
+          echo "Creating .ssh directory"
           mkdir -p ~/.ssh
 
-          echo "Dumping first 5 lines of private key (masked by GitHub)..."
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" | head -n 5 || echo "❌ EMPTY KEY"
+          echo "Dumping first 5 lines of private key (masked by GitHub)"
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" | head -n 5 || echo "EMPTY KEY"
 
-          echo "Writing to id_rsa"
+          echo "Writing key to id_rsa"
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
 
-          echo "Setting permissions"
+          echo "Setting permissions on id_rsa"
           chmod 600 ~/.ssh/id_rsa
 
-          echo "Scanning known_hosts"
+          echo "Running ssh-keyscan"
           ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
 
-          echo "Showing contents of known_hosts"
+          echo "Showing known_hosts contents"
           cat ~/.ssh/known_hosts
 
-          echo "SSH key setup completed"
+          echo "SSH setup complete"
 
-      - name: 🛠 Debug SSH key length
+      - name: Debug SSH key length
         run: |
-          echo "Key length:"
-          echo "${{ secrets.SSH_PRIVATE_KEY }}"
+          echo "Key length (should be > 1500):"
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" | wc -c
+
+      - name: Debug SERVER_IP value
+        run: |
+          echo "SERVER_IP is: ${{ secrets.SERVER_IP }}"
+
+      - name: Deploy to server
+        run: |
+          echo "Connecting to server..."
+          ssh -v ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
+            echo "Changing directory to ${{ secrets.DP_PATH }}"
+            cd ${{ secrets.DP_PATH }}
+
+            echo "Pulling latest code"
+            git pull origin main
+
+            echo "Restarting gunicorn"
+            sudo systemctl restart gunicorn
+
+            echo "Deployment finished"
+          EOF
